# CerebroCortex

./: .gitignore  .hermes.md  CEREBRO.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  HERMES_INTEGRATE.md  HERMES_INTEGRATION_REPORT.md  HERMES_SKILL.md  INTEGRATE.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  cerebro  cerebro-api  cerebro-mcp  install.sh  pyproject.toml  requirements.txt
.hermes/plans/: cerebro-cognitive-bootstrap.md  ecs-analysis-and-integration.md  v0.4.2.md
scripts/: bootstrap_ccbs.py  reembed_collections.py
src/cerebro/: __init__.py  _init_dirs.py  config.py  cortex.py  events.py  settings.py  types.py
src/cerebro/activation/: __init__.py  decay.py  spreading.py  strength.py
src/cerebro/bootstrap/modules/: module-analysis.md  module-cerebro-agents.md  module-cerebro-index.md  module-cerebro-intentions.md  module-cerebro-meta.md  module-cerebro-ops.md  module-cerebro-session.md  module-communicate.md  module-core.md  module-creative.md  module-research.md  module-technical.md  soul.md
src/cerebro/engines/: __init__.py  amygdala.py  association.py  cerebellum.py  dream.py  hippocampus.py  neocortex.py  prefrontal.py  tag_manager.py  temporal.py  thalamus.py
src/cerebro/ingestion/: __init__.py  base.py  chunker.py  csv_adapter.py  html_adapter.py  image_adapter.py  json_adapter.py  markdown_adapter.py  pdf_adapter.py  pipeline.py  text_adapter.py
src/cerebro/interfaces/: __init__.py  api_server.py  cli.py  mcp_server.py
src/cerebro/migration/: __init__.py  json_import.py  markdown_import.py  neo_cortex_import.py  text_import.py
src/cerebro/models/: __init__.py  activation.py  agent.py  attachment.py  episode.py  link.py  memory.py
src/cerebro/storage/: base.py  chroma_store.py  coordinator.py  embedder_fingerprint.py  embeddings.py  graph_store.py  sqlite_schema.py  vision_embeddings.py
src/cerebro/utils/: __init__.py  llm.py
src/cerebro/watch/: __init__.py  watcher.py
src/cerebro/web/: index.html
src/cerebro/web/css/: main.css
src/cerebro/web/js/: api.js  app.js
src/cerebro/web/js/panels/: audit.js  cortex.js  decay.js  dream.js  graph.js  health.js  ingest.js  memories.js  settings.js  store.js  tags.js  threads.js  trash.js
tests/: conftest.py  test_settings.py  test_watch.py
tests/test_activation/: test_spreading.py  test_strength.py
tests/test_bootstrap/: test_ccbs.py
tests/test_crud/: test_soft_delete.py
tests/test_engines/: test_amygdala.py  test_association.py  test_cerebellum.py  test_cortex.py  test_dream.py  test_hippocampus.py  test_neocortex.py  test_prefrontal.py  test_scope_enforcement.py  test_temporal.py  test_thalamus.py
tests/test_ingestion/: test_adapters.py  test_chunker.py  test_dedup.py  test_semantic_chunker.py
tests/test_interfaces/: test_api_server.py  test_cli.py  test_mcp_server.py
tests/test_migration/: test_cli_import.py  test_json_import.py  test_markdown_import.py  test_neo_cortex_import.py
tests/test_models/: test_memory.py
tests/test_storage/: test_embedder_fingerprint.py  test_graph_store.py
tests/test_utils/: test_llm.py
tests/test_vision/: test_cross_modal.py  test_vision_store.py
web/: index.html
